Updates for Week 13

--- a/template/index.html
+++ b/template/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body>
+<body style="background-color:powderblue;">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -66,17 +66,35 @@
         <!-- Introduction Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">About Us
+                <h1 class="page-header">Hello World!
                     <small>It's Nice to Meet You!</small>
                 </h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
             </div>
         </div>
 
+
+
+        <img src="https://avatars1.githubusercontent.com/u/25084478?v=3&u=ae3c1914f62f1c049b25dab5791d2478df394fe4&s=400g" align="right">
+
+        <h1 style="color:yellow;">Welcome to my first website!</h1>
+        <h2 style="color:red;">Things I want to add to my website:</h2>
+        <h2 style="color:white;">I've made a few changes to my site :P</h2>
+        <ol>
+            <li>More pages</li>
+            <li>Graphics and images</li>
+            <li>Information about myself</li>
+            <li>Links to interesting sites</li>
+            <li>Games to play</li>
+        </ol>
+
+
+
+
         <!-- Team Members Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Our Team</h2>
+                <h2 class="page-header">All About Becoming A Web Developer</h2>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
